[dependencies]
clap = {default-features = false, features = [
  "color",
  "derive",
  "help",
  "std",
  "suggestions",
  "usage"
], version = "=4.5.4"}
owo-colors = "=4.0.0"
regex = {default-features = false, features = [
  "perf",
  "std"
], version = "=1.10.4"}
time = {default-features = false, features = [
  "formatting",
  "local-offset",
  "macros"
], version = "=0.3.36"}
timeago = {default-features = false, version = "=0.4.2"}

[package]
edition = "2021"
license = "MIT"
name = "readtimestamp"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
